refactor(controller): createCars() 메서드에서 문자열 분리와 객체 생성 기능 분리
createCars() 메서드는 리스트를 통해 객체를 생성하는 역할만 수행합니다.
- 기존 문자열을 분리하여 리스트로 만드는 과정은 inputAndValidateCarNames()로 이동합니다.